tests/fail/IXor.java
package fail;

import java.lang.System;

public class IXor {
	public static void main(String[] args) {
		System.out.println(true ^ 42);
	}
}
